# predicate-query

./: .gitignore  README.md  pyproject.toml  world.json
examples/: example_world.json  sample_queries.txt
src/: grammar.lark  main.py  parser.py  sim_objects.py  worlds.py
